# PhotoLab

./: README.md
PhotoLab/: build.gradle  settings.gradle
PhotoLab/app/: build.gradle  proguard-rules.pro
PhotoLab/app/src/androidTest/java/com/icanmobile/photolab/: ExampleInstrumentedTest.java
PhotoLab/app/src/main/: AndroidManifest.xml
PhotoLab/app/src/main/assets/model/: activity_camera.json  activity_gallery.json  activity_photo.json
PhotoLab/app/src/main/java/com/icanmobile/photolab/: PhotoLabApplication.java
PhotoLab/app/src/main/res/anim/: left_in.xml  left_out.xml  right_in.xml  right_out.xml
PhotoLab/app/src/main/res/drawable/: res_effect.xml  res_gallery.xml  res_save.xml  res_shutter.xml  res_toggle.xml
PhotoLab/app/src/main/res/layout/: activity_camera.xml  activity_photo.xml  fragment_grid.xml  image_card.xml  view_camera.xml
PhotoLab/app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml
PhotoLab/app/src/main/res/values-land/: dimens.xml  integers.xml
PhotoLab/app/src/test/java/com/icanmobile/photolab/: ExampleUnitTest.java
PhotoLab/effects/: build.gradle
PhotoLab/effects/src/androidTest/java/com/icanmobile/effects/: ExampleInstrumentedTest.java
PhotoLab/effects/src/main/: AndroidManifest.xml
PhotoLab/effects/src/main/cpp/: CMakeLists.txt  NativePhotoEffect.cpp
PhotoLab/effects/src/main/cpp/ldr/: LDR.cpp  LDR.h  ToneMappingBase.cpp  ToneMappingBase.h  ToneMappingInt.cpp  ToneMappingInt.h
PhotoLab/effects/src/main/res/values/: strings.xml
PhotoLab/key/: PhotoLabKey
(+40 files in other folders)
